Ma version 3 functions similaires

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Exercice JavaScript</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
   </head>
   <body>
     <header>
@@ -39,9 +40,9 @@
             </tr>
           </tbody>
         </table>
-        <button>Acheter un sac de pommes</button>
-        <button>Acheter un sac de poires</button>
-        <button>Acheter un sac de prunes</button>
+        <button id="pommeBTN" onclick="AddPomme()">Acheter un sac de pommes</button>
+        <button id="poireBTN"  onclick="AddPoire()">Acheter un sac de poires</button>
+        <button id="pruneBTN"  onclick="AddPrune()">Acheter un sac de prunes</button>
       </section>
       <section>
         <h2>Vos achats</h2>
