Ma version 1 seule fonction

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             </tr>
           </tbody>
         </table>
-        <button id="pommeBTN" onclick="AddPomme()">Acheter un sac de pommes</button>
-        <button id="poireBTN"  onclick="AddPoire()">Acheter un sac de poires</button>
-        <button id="pruneBTN"  onclick="AddPrune()">Acheter un sac de prunes</button>
+        <button id="pommeBTN" onclick="AddItem('Pommes')">Acheter un sac de pommes</button>
+        <button id="poireBTN"  onclick="AddItem('Poires')">Acheter un sac de poires</button>
+        <button id="pruneBTN"  onclick="AddItem('Prunes')">Acheter un sac de prunes</button>
       </section>
       <section>
         <h2>Vos achats</h2>
